--- a/SharpConfig/SharpConfig.csproj
+++ b/SharpConfig/SharpConfig.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{85C815FA-63EA-48D2-AC32-E0BF2C4F6858}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SimpleConfig</RootNamespace>
+    <RootNamespace>SharpConfig</RootNamespace>
     <AssemblyName>SimpleConfig</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
